# The-HigherSelf-Network-Server

./: .dockerignore  .env.demo.template  .env.development.template  .env.docker.example  .env.example  .env.production.template  .env.redis.example  .env.staging  .env.the7space.production  .env.the7space.production.template  .env.vm.production  .env.vm.production.template  .flake8  .gitignore  .gitignore.env  .npmrc  .pre-commit-config.yaml  1PASSWORD_TERMIUS_INTEGRATION_GUIDE.md  AGENTS.md  AGENT_PORTAL_SETUP.md  AGENT_WORKFLOW_ROADMAP.md  AUGMENT_CODE_MCP_CONFIGURATION.md  CLAUDE_CODE_SETUP_GUIDE.md  CLEANUP_SUMMARY.md  COMPLETE_DEPLOYMENT_GUIDE.md  COMPLETE_DOCKER_DEPLOYMENT_SUMMARY.md  CONNECT_YOUR_TERMIUS_ACCOUNT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CREDENTIAL_SETUP_GUIDE.md  DASHBOARD_INTEGRATION_COMMIT_GUIDE.md  DELIVERY_SUMMARY.md  DEVIN_AI_SETUP_DOCUMENTATION.md  DEVIN_COMPREHENSIVE_SETUP_GUIDE.md  DEVIN_DEPLOYMENT_COMPLETE.md  DEVIN_DEPLOYMENT_READY.md  DEVIN_DEPLOYMENT_SUMMARY.md  DEVIN_REPOSITORY_NOTES.md  DIRECTORY_REORGANIZATION_PLAN.md  DOCKER_DEPLOYMENT_GUIDE.md  (+128 more)
.devcontainer/: devcontainer.json
.roo/: CLAUDE.md  roo_settings.json
.windsurf/: 7space_technical_plan.json  agent_augmentation.json  git_conflict_resolution.json  technical_debugging.json  workflows.json
MetroPower-Dashboard/: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  README.md  VERCEL_DEPLOYMENT.md  VERCEL_READY.md  devin_metropower_validation.py  docker-compose.yml  nginx.conf  package-lock.json  package.json  vercel.json
agents/: __init__.py  agent_personalities.py  audience_segmentation_agent.py  base_agent.py  booking_agent.py  community_engagement_agent.py  content_lifecycle_agent.py  grace_fields_enhanced.py  langchain_agent.py  lead_capture_agent.py  marketing_campaign_agent.py  multi_entity_agent_orchestrator.py  nyra_enhanced.py  nyra_realtime_enhanced.py  rag_agent.py  task_management_agent.py  video_content_agent.py
api/: __init__.py  auth.py  capcut_pipit_router.py  contact_workflow_webhooks.py  crawl_router.py  dashboard_router.py  health_endpoints.py  huggingface_router.py  mcp_tools_router.py  multi_entity_workflows.py  notion_intelligence_hub.py  notion_mail_integration.py  openml_router.py  rag_router.py  server.py  softr_router.py  termius_integration.py  todoist_router.py  video_router.py  voice_router.py  webhooks.py  webhooks_beehiiv.py  webhooks_bettermode.py  webhooks_circleso.py  websocket_router.py  zapier_ecosystem.py
api-gateway/: .env.example  README.md  package.json
architecture/: enhanced_architecture.md  index.html  update_log.txt  update_visualization.py
assets/: database_visualization.html
business_correspondence/: Higher_Self_Team_Resurrection_Partnership_Letter_Template.md
config/: __init__.py  business_entity_workflows.py  context_engineering_config.py  database_config.py  langchain_config.py  moneyprinter_config.py  notion_databases.py  secrets_config.py  server_documentation.json  settings.py  settings_v2.py  testing_mode.py  windsurf_workflows.py
dashboard/: .env.example  (+6 more)
(+805 files in other folders)
